_elements.scss: fix: content shifting by seting height

--- a/www/css/_elements.scss
+++ b/www/css/_elements.scss
@@ -45,14 +45,18 @@ dialog {
   }
 }
 
-ul {
-  &.no-dots {
-    list-style-type: none;
-  }
+header {
+  height: 34px;
 }
 
 summary {
   cursor: pointer;
+}
+
+ul {
+  &.no-dots {
+    list-style-type: none;
+  }
 }
 
 /* custom elements */
